19760_stack_overflow_dina_mapper_circular_relation
- Add test for circular reference
- Add first iteration of the implementation